--- a/waynemaranga.com/hugo.toml
+++ b/waynemaranga.com/hugo.toml
@@ -2,6 +2,7 @@ baseURL = 'https://waynemaranga.github.io/'
 languageCode = 'en-us'
 title = 'Wayne Maranga'
 theme = 'nightfall'
+# theme = "hermit-v2"
 
 [menu]
 [[menu.header]]
@@ -20,18 +21,26 @@ weight = 1
 [params]
 user = "Wayne Maranga"
 hostname = ""
+footerHtml = '&copy; Wayne Maranga, 2024. Built with Hugo & Nightfall'
+readingTime = true                                                     # Show reading time on post page
+published = true                                                       # Show published data on post page
+
 [params.author]
 name = "Wayne Maranga"           # Website and RSS feed author
 email = "waynemaranga@gmail.com" # RSS feed email address
 [[params.social]]
 key = 0
-name = "github"
-url = "https://github.com/waynemaranga"
+name = "Posts"
+url = "posts"
 [[params.social]]
 key = 1
-name = "linkedin"
-url = "https://www.linkedin.com/in/wayne-maranga-462277166/"
+name = "GitHub"
+url = "https://github.com/waynemaranga"
 [[params.social]]
 key = 2
-name = "email"
+name = "LinkedIn"
+url = "https://www.linkedin.com/in/wayne-maranga-462277166/"
+[[params.social]]
+key = 3
+name = "Email"
 url = "mailto:waynemaranga@gmail.com"
